# dinnote

./: README.md  pyproject.toml
src/dinnote/: __init__.py  cli.py  config.py  config.yaml  denoise.py  diarize.py  pipeline.py  transcribe.py  utils.py  vad.py
